--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url(img/background.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
+/*   background: url(img/background.jpg) no-repeat */
+/*   background-position: center;
+  background-size: cover; */
+  background: radial-gradient(circle at 74.2% 50.9%, rgb(14, 72, 222) 5.2%, rgb(3, 22, 65) 75.3%);
 }
 
 .container {
